--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -395,6 +395,14 @@ tr.bp-search-parent-field label {
 	margin-right: 15px;
 }
 
+.bp-admin-card .inside {
+	padding: 1.5em 2em 2em;
+
+	p {
+		margin-top: 0;
+	}
+}
+
 .bp-admin-card .form-table {
 	margin-top: 0;
 
