--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3959,16 +3959,6 @@ input#send-to-input {
   color: #333;
 }
 
-.single.messages.view .bp-messages-filters,
-.single.messages.view .bp-messages-threads-list {
-  display: none;
-}
-
-.messages.compose .bp-messages-filters,
-.messages.compose .bp-messages-threads-list {
-  display: none;
-}
-
 #send_message_form .select2-selection--multiple {
   border-color: #d6d6d6;
   padding: 3px 5px;
@@ -5512,7 +5502,8 @@ button[data-bp-close]:hover {
   }
 }
 
-/*-------------------------------------*	HINT.css - A CSS tooltip library
+/*-------------------------------------*\
+	HINT.css - A CSS tooltip library
 \*-------------------------------------*/
 /**
  * HINT.css is a tooltip library made in pure CSS.
@@ -9999,7 +9990,7 @@ ul.bb-albums-list .bb-more-photos strong {
 .bb-album-list-item .bs-cover-wrap:after {
   content: " ";
   position: absolute;
-  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 60%, transparent 100%);
+  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 60%, rgba(0, 0, 0, 0) 100%);
   border-radius: 3px;
   width: 100%;
   height: 100%;
