--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -969,20 +969,21 @@ body.post-type-bp-email .categorydiv label {
 		width: 32%;
 		background-color: #fff;
 		border: 1px solid #e5e5e5;
+		border-radius: 6px;
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 		box-sizing: border-box;
 
-		h3 {
-			border-bottom: 1px solid #e5e5e5;
-			font-size: 14px;
-			padding: 8px 12px;
-			margin: 0;
-			line-height: 1.4;
+		.inside {
+			padding: 1.8em 2em;
+			min-height: 60px;
 		}
 
-		.inside {
-			padding: 0 15px;
-			min-height: 60px;
+		h2 {
+			border-bottom: 1px solid #e5e5e5;
+			font-size: 18px;
+			padding: 0 0 1em;
+			margin: 0;
+			line-height: 1.4;
 		}
 	}
 
@@ -1099,6 +1100,10 @@ body.post-type-bp-email .categorydiv label {
 
 @media screen and (max-width: 781px) {
 
+	.bp-help-card-grid .bp-help-card {
+		width: 48%;
+	}
+
 	.bb-help-sidebar {
 		background: #f9f9f9;
 		padding: 2.5em;
@@ -1112,6 +1117,15 @@ body.post-type-bp-email .categorydiv label {
 		padding: 2.5em;
 		width: 100%;
 	}
+}
+
+@media screen and (max-width: 550px) {
+
+	.bp-help-card-grid .bp-help-card {
+		margin-right: 0;
+		width: 100%;
+	}
+
 }
 
 /*------------------------------------------------------------------------------
