--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -948,16 +948,20 @@ body.post-type-bp-email .categorydiv label {
 }
 
 .bp-help-card-grid .bp-help-card .inside {
-  padding: 1.8em 2em;
+  padding: 1.8em 2em 1em;
   min-height: 60px;
 }
 
 .bp-help-card-grid .bp-help-card h2 {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #eaeaea;
   font-size: 18px;
   padding: 0 0 1em;
-  margin: 0;
+  margin: 0 0 1em;
   line-height: 1.4;
+}
+
+.bp-help-card-grid .bp-help-card p:first-child {
+  margin-top: 0;
 }
 
 .bp-help-card-grid .bp-help-card:nth-child(3n) {
@@ -1032,6 +1036,11 @@ body.post-type-bp-email .categorydiv label {
 
 .bb-help-content ul.bb-help-menu li:last-child a {
   color: #999;
+}
+
+.bb-help-content hr {
+  border-top: none;
+  border-bottom: 1px solid #eaeaea;
 }
 
 .bb-help-content img {
