--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -974,16 +974,20 @@ body.post-type-bp-email .categorydiv label {
 		box-sizing: border-box;
 
 		.inside {
-			padding: 1.8em 2em;
+			padding: 1.8em 2em 1em;
 			min-height: 60px;
 		}
 
 		h2 {
-			border-bottom: 1px solid #e5e5e5;
+			border-bottom: 1px solid #eaeaea;
 			font-size: 18px;
 			padding: 0 0 1em;
-			margin: 0;
+			margin: 0 0 1em;
 			line-height: 1.4;
+		}
+
+		p:first-child {
+			margin-top: 0;
 		}
 	}
 
@@ -1067,6 +1071,11 @@ body.post-type-bp-email .categorydiv label {
 		li:last-child a {
 			color: #999;
 		}
+	}
+
+	hr {
+		border-top: none;
+		border-bottom: 1px solid #eaeaea;
 	}
 
 	img {
