--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -934,12 +934,13 @@ body.post-type-bp-email .categorydiv label {
 
 .bp-help-card-grid {
   margin-top: 20px;
+  min-width: 255px;
+  max-width: 1050px;
 }
 
 .bp-help-card-grid .bp-help-card {
   float: right;
-  margin: 0 0 2% 2%;
-  width: 32%;
+  margin-bottom: 2%;
   background-color: #fff;
   border: 1px solid #e5e5e5;
   border-radius: 6px;
@@ -962,14 +963,6 @@ body.post-type-bp-email .categorydiv label {
 
 .bp-help-card-grid .bp-help-card p:first-child {
   margin-top: 0;
-}
-
-.bp-help-card-grid .bp-help-card:nth-child(3n) {
-  margin-left: 0;
-}
-
-.bp-help-card-grid .bp-help-card:nth-child(3n+1) {
-  clear: both;
 }
 
 .bp-help-card-grid .bb-help-content-wrap {
@@ -1049,6 +1042,16 @@ body.post-type-bp-email .categorydiv label {
 }
 
 @media screen and (min-width: 782px) {
+  .bp-help-card-grid .bp-help-card {
+    margin-left: 2%;
+    width: 32%;
+  }
+  .bp-help-card-grid .bp-help-card:nth-child(3n) {
+    margin-left: 0;
+  }
+  .bp-help-card-grid .bp-help-card:nth-child(3n+1) {
+    clear: both;
+  }
   .bb-help-sidebar {
     background: #f9f9f9;
     padding: 2.5em;
@@ -1071,7 +1074,14 @@ body.post-type-bp-email .categorydiv label {
 
 @media screen and (max-width: 781px) {
   .bp-help-card-grid .bp-help-card {
-    width: 48%;
+    margin-left: 2%;
+    width: 49%;
+  }
+  .bp-help-card-grid .bp-help-card:nth-child(2n) {
+    margin-left: 0;
+  }
+  .bp-help-card-grid .bp-help-card:nth-child(2n+1) {
+    clear: both;
   }
   .bb-help-sidebar {
     background: #f9f9f9;
@@ -1089,7 +1099,6 @@ body.post-type-bp-email .categorydiv label {
 
 @media screen and (max-width: 550px) {
   .bp-help-card-grid .bp-help-card {
-    margin-left: 0;
     width: 100%;
   }
 }
