--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1060,6 +1060,11 @@ body.post-type-bp-email .categorydiv label {
 		display: none;
 	}
 
+	h1 {
+		font-weight: 500;
+		font-size: 25px;
+	}
+
 	code {
 		display: block;
 		padding: 10px 15px;
