--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -963,6 +963,7 @@ body.post-type-bp-email .categorydiv label {
 		border-radius: 6px;
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 		box-sizing: border-box;
+		min-height: 195px;
 
 		.inside {
 			padding: 1.8em 2em 1em;
@@ -1019,7 +1020,7 @@ body.post-type-bp-email .categorydiv label {
 			margin: 1.2em 0;
 		}
 
-		> ul > li.selected a {
+		ul > li.selected > a {
 			font-weight: 600;
 		}
 
@@ -1028,6 +1029,27 @@ body.post-type-bp-email .categorydiv label {
 			list-style-type: disc;
 		}
 
+	}
+
+	span.open {
+		font-size: 0;
+
+		&:after {
+			font-family: dashicons;
+			content: "\f345";
+			margin: 0 5px;
+			display: inline-block;
+			vertical-align: bottom;
+			font-size: 10px;
+			color: #999;
+			cursor: pointer;
+		}
+
+		&.active {
+			&:after {
+				transform: rotate(90deg);
+			}
+		}
 	}
 
 }
